--- a/src/components/CardList/Card/index.module.scss
+++ b/src/components/CardList/Card/index.module.scss
@@ -1,9 +1,13 @@
 .cardWrapper {
   object-fit: initial;
-  height: 200px;
 
   .imageWrapper {
-      height: 100%;
-      object-fit: contain;
+      object-fit: initial;
+      height: 200px;
+
+      .image{
+        object-fit: contain;
+        height: 100%;
+      }
   }
 }
